# gitshit-client

./: Cargo.toml
src/: command.rs  db_insert.rs  main.rs  post_generate.rs  set_credentials.rs
