[package]
name = "gs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
fs = "0.0.5"
io = "0.0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.228"
